--- a/style.css
+++ b/style.css
@@ -11,7 +11,7 @@
     --secondary-text-color: #577592;
     --accent-color: #2294ed;
     --accent-color-dark :#1d6983;
-    --padding-line-section: 20px
+    --padding-line-section: 20px;
 }
 body{
     font-family: 'Poppins', sans-serif;
@@ -47,6 +47,7 @@ ul{
     max-width: 1180px;
     margin-inline: auto;
     padding-inline: var(--padding-line-section);
+    overflow: hidden;
 }
 .flex{
     display: flex;
@@ -60,6 +61,7 @@ ul{
     padding: 12px 24px;
     box-shadow: 0 0 2px var(--secondary-text-color);
     transition: 0.2s ease-out;
+    text-align: center;
 }
 .primary-button:hover{
     background-color: var(--accent-color-dark);
@@ -90,6 +92,7 @@ ul{
 .main-nav{
     margin-top: 20px;
     justify-content: space-between;
+    position: relative;
 }
 .cmpny-logo img{
     width: 200px;
@@ -101,6 +104,10 @@ ul{
     justify-content: end;
     gap: 40px;
 }
+.nav-toggle{
+    display: none;
+}
+
 .hover-link{
     color: var(--primary-text-color);
     transition: 0.2s ease-out;
@@ -117,7 +124,7 @@ header{
     gap: 50px;
 }
 .header-right img{
-    width: 600px;
+    width: 100%;
 }
 .header-left{
     max-width: 40vw;
@@ -135,8 +142,9 @@ header{
     color: var(--primary-text-color);
 }
 .logos{
-    justify-content: space-between;
+    justify-content: space-evenly;
     flex-wrap: wrap;
+    gap: 20px;
 }
 .logo{
     height: 46px;
@@ -145,13 +153,13 @@ header{
 
 .features-sec{
     padding: 80px var(--padding-line-section) 0;
-    /* margin: 80px; */
     background-image: url(./assets/asset\ 34.svg);
     background-repeat: no-repeat;
     background-position: center;
 }
 .feature-header{
     text-align: center;
+    margin-bottom: 40px;
 }
 .feature-header h2{
     margin-bottom: 20px;
@@ -160,7 +168,7 @@ header{
 .features-area{
     flex-wrap: wrap;
     justify-content: space-between;
-    gap: 40px;
+    gap: 20px;
     margin-top: 20px;
     
 }
@@ -189,15 +197,20 @@ width: 100%;
     align-items: flex-start;
 }
 
+
+.emp-sec{
+    padding: 80px var(--padding-line-section);
+}
 .exp-header{
     flex-direction: column;
     gap: 20px;
+    text-align: center;
 }
 
 .emp-card{
     width: 23%;
     position: relative;
-    min-height: 300px;
+    height: 300px;
     background: black;
     background: linear-gradient(rgba(0, 0, 0, 0.1), rgba(0, 0, 0, 0.8)), url(assets/asset\ 37.jpeg );
     background-size: cover;
@@ -228,6 +241,7 @@ width: 100%;
 .emp-area{
     justify-content: space-between;
     margin-block: 30px;
+    flex-wrap: wrap;
 }
 
 
@@ -236,6 +250,7 @@ width: 100%;
     gap: 30px;
     color: white;
     padding: 120px var(--padding-line-section) 80px;
+    text-align: center;
 }
 .cta-sec-cont p{
     color: white;
@@ -267,4 +282,5 @@ footer{
 .subfooter-container{
     justify-content: center;
     gap: 30px;
+    flex-wrap: wrap;
 }
